--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,45 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Two
+    <ion-title class="ion-text-center">
+      Favoritos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div>
+    <ion-card class="welcome-card">
+      <img src="https://s7d2.scene7.com/is/image/TWCNews/1031_nc_sunny_weather_2-1" alt="" />
+      <ion-card-header>
+        <ion-card-subtitle>Get Started</ion-card-subtitle>
+        <ion-card-title>Mar del Plata</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of
+          the resources below for next steps.</p>
+      </ion-card-content>
+    </ion-card>
+    <ion-card class="welcome-card">
+      <img src="https://s7d2.scene7.com/is/image/TWCNews/1031_nc_sunny_weather_2-1" alt="" />
+      <ion-card-header>
+        <ion-card-subtitle>Get Started</ion-card-subtitle>
+        <ion-card-title>Mar del Plata</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of
+          the resources below for next steps.</p>
+      </ion-card-content>
+    </ion-card>
+    <ion-card class="welcome-card">
+      <img src="https://s7d2.scene7.com/is/image/TWCNews/1031_nc_sunny_weather_2-1" alt="" />
+      <ion-card-header>
+        <ion-card-subtitle>Get Started</ion-card-subtitle>
+        <ion-card-title>Mar del Plata</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of
+          the resources below for next steps.</p>
+      </ion-card-content>
+    </ion-card>
+  </div>
+</ion-content>
