--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,9 +1,30 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Three
+    <ion-title class="ion-text-center">
+      Buscar
     </ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar showCancelButton="focus"></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list lines="none">
+    <!-- <ion-list-header>
+      <ion-label>Resources</ion-label>
+    </ion-list-header> -->
+    <ion-item href="#">
+      <ion-icon slot="start" color="medium" name="heart"></ion-icon>
+      <ion-label>La Plata</ion-label>
+    </ion-item>
+    <ion-item href="#">
+      <ion-icon slot="start" color="medium" name="heart"></ion-icon>
+      <ion-label>Mar del Plata</ion-label>
+    </ion-item>
+    <ion-item href="#">
+      <ion-icon slot="start" color="medium" name="heart"></ion-icon>
+      <ion-label>Junin</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
