--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,6 +1,10 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
+    <ion-tab-button>
+      <ion-menu-button></ion-menu-button>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab1">
       <ion-icon name="locate"></ion-icon>
       <ion-label>Tu ubicacion</ion-label>
