--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,15 +1,15 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title class="ion-text-center">
       Buscar
     </ion-title>
   </ion-toolbar>
+</ion-header> -->
+
+<ion-content>
   <ion-toolbar>
     <ion-searchbar showCancelButton="focus"></ion-searchbar>
   </ion-toolbar>
-</ion-header>
-
-<ion-content>
   <ion-list lines="none">
     <!-- <ion-list-header>
       <ion-label>Resources</ion-label>
