--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -11,7 +11,7 @@
       Click me
     </ion-button>   -->
   
-    <ion-card class="weather-card" *ngFor="let f of fav">
+    <ion-card class="weather-card" *ngFor="let f of favoritos">
       <ion-card-header>
         <ion-card-title color="light">{{f.ciudad}}, {{f.pais}}</ion-card-title>
         <ion-card-subtitle color="light"><p>{{f.descripcion|titlecase}} {{f.temp_max}} / {{f.temp_min}}C</p></ion-card-subtitle>
