--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -30,7 +30,7 @@
       <div class="location-wrapper">
         <h5 class="ciudad">
           {{clima.ciudad}}, {{clima.pais}}
-          <a class="btn-volver" (click)="volver()"><ion-icon name="close-circle-outline"></ion-icon></a>
+          <a class="btn-volver" (click)="volver()"><ion-icon name="close"></ion-icon></a>
         </h5>
       </div>
 
