--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,21 +5,21 @@
 
   <div>
     <div class="img-wrapper">
-      <img class="weather-img" src="{{local_clima.icon}}" alt="" />
+      <img class="weather-img" src="{{clima.icon}}" alt="" />
     </div>
 
     <div class="weather-wrapper">
       <div class="location-wrapper">
         <h5 class="ciudad">
-          <ion-icon style="font-size: smaller;" name="pin"></ion-icon> {{local_clima.ciudad}}
+          <ion-icon style="font-size: smaller;" name="pin"></ion-icon> {{clima.ciudad}}, {{clima.pais}}
         </h5>
-        <legend>Actualizado: {{local_clima.fecha}}</legend>
+        <legend>Actualizado: {{clima.fecha}}</legend>
       </div>
 
       <div class="details-wrapper">
-        <h1 class="temperatura">{{local_clima.temp}}</h1>
-        <p>{{local_clima.descripcion|titlecase}} {{local_clima.temp_max}} / {{local_clima.temp_min}}C</p>
-        <p>Humedad: {{local_clima.humedad}}%</p>
+        <h1 class="temperatura">{{clima.temp}}</h1>
+        <p>{{clima.descripcion|titlecase}} {{clima.temp_max}} / {{clima.temp_min}}C</p>
+        <p>Humedad: {{clima.humedad}}%</p>
       </div> 
     </div>
 
