--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,11 +13,14 @@
   
     <ion-card class="weather-card" *ngFor="let f of favoritos">
       <ion-card-header>
-        <ion-card-title color="light">{{f.ciudad}}, {{f.pais}}</ion-card-title>
+        <ion-card-title color="light">{{f.ciudad}}, {{f.pais}} <strong>{{f.temp}}</strong></ion-card-title>
         <ion-card-subtitle color="light"><p>{{f.descripcion|titlecase}} {{f.temp_max}} / {{f.temp_min}}C</p></ion-card-subtitle>
+        <img src="{{f.icon}}" alt="" class="weather-icon">
       </ion-card-header>
       <!-- <ion-card-content>
-        <p>{{f.descripcion}}</p>
+        <ion-button (click)="eliminar(f.id)">
+          Eliminar
+        </ion-button>
       </ion-card-content> -->
     </ion-card>
     
