--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,9 +7,8 @@
 </ion-header>
 
 <ion-content>
-    <!-- <ion-button (click)="onClick()">
-      Click me
-    </ion-button>   -->
+
+    <ion-progress-bar *ngIf="loading" type="indeterminate" reversed="true"></ion-progress-bar>
   
     <ion-card class="weather-card" *ngFor="let f of favoritos">
       <ion-card-header>
